[build-system]
requires = ["setuptools>=45",
            "setuptools_scm[toml]>=6.2",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "hermes_nemisis"
description = "A Python package to process and analyze data from the HERMES nemisis instrument."
readme = "README.rst"
dynamic = ["version"]
authors = [{name = "Steven Christe", email="steven.d.christe@nasa.gov"},
           {name = "Damian Barrous Dumme", email="damianbarrous@gmail.com"}]
license = {file = "LICENSE.rst"}
requires-python = ">=3.9"
keywords = ["hermes", "nasa mission", "space weather"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache 2.0",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  'astropy>=4.1.0',
  'numpy>=1.16.0',
  'hermes_core @ git+https://github.com/HERMES-SOC/hermes_core/',
  'ccsdspy @ git+https://github.com/ddasilva/ccsdspy.git'
]

[project.optional-dependencies]
dev = [
  'coverage>=5.0.3',
  'pytest==8.0.0',
  'pytest-astropy==0.11.0',
  'pytest-cov==4.1.0',
  'black==24.1.1',
  'flake8==7.0.0',
  'coverage[toml]==7.4.1'
]

docs = [
  'sphinx==7.2.6',
  'sphinx-automodapi==0.16.0'
]

test = [
  'pytest==8.0.0',
  'pytest-astropy==0.11.0',
  'pytest-cov==4.1.0',
  'coverage[toml]==7.4.1'
]

style = [
  'black==24.1.1',
  'flake8==7.0.0'
]

[tool.setuptools.package-data]
"hermes_nemisis.data" = ["**"]

[tool.setuptools]
packages = ["hermes_nemisis"]

[tool.setuptools_scm]
write_to = "hermes_nemisis/_version.py"

[tool.pytest.ini_options]
testpaths = [
   "hermes_nemisis/tests",
   "docs"
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
  'hermes_nemisis/__init*',
  'hermes_nemisis/conftest.py',
  'hermes_nemisis/*setup_package*',
  'hermes_nemisis/tests/*',
  'hermes_nemisis/*/tests/*',
  'hermes_nemisis/extern/*',
  'hermes_nemisis/version*',
  '*/hermes_nemisis/__init*',
  '*/hermes_nemisis/conftest.py',
  '*/hermes_nemisis/*setup_package*',
  '*/hermes_nemisis/tests/*',
  '*/hermes_nemisis/*/tests/*',
  '*/hermes_nemisis/extern/*',
  '*/hermes_nemisis/version*',
]

[tool.black]
extend-exclude = '''hermes_nemisis/_version.py'''